# plasma-stock-widget

./: .gitignore  CMakeLists.txt  metadata.desktop  refresh.sh
com.dymitruk.stockticker/: metadata.json
com.dymitruk.stockticker/contents/config/: configGeneral.qml  main.xml
com.dymitruk.stockticker/contents/ui/: configGeneral.qml  stock-chart.qml
com.dymitruk.stockticker/contents/ui/configGeneral/: ConfigGeneral.qml
contents/code/: main.js
contents/config/: main.xml
contents/ui/: main.qml
package/: metadata.json
